# terraform-provider-tofusoup

./: .gitguardian.yaml  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .trufflehog-exclude-paths.txt  ANALYSIS_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  VERSION  mkdocs.yml  pyproject.toml  soup.toml  wrknv.toml
.claude/: settings.local.json
.github/scripts/: install-provider.sh  run-conformance-suite.sh  sign-release.sh  single-test-verification.sh
.github/workflows/: build-provider.yml  ci.yml  release.yml  test-conformance.yml
.provide/: LINT_FIX_PLAN.md
docs/: architecture.md  index.md  use-cases.md
docs/archive/: QUICK_REFERENCE_MODULE_SEARCH.md  RELEASE_NOTES.md  RESEARCH_MODULE_SEARCH.md
docs/data-sources/: module_info.md  module_search.md  module_versions.md  provider_info.md  provider_versions.md  registry_search.md  state_info.md  state_outputs.md  state_resources.md
examples/data-sources/module_search/: provider.tf
examples/data-sources/module_versions/: basic.tf
examples/data-sources/provider_info/: basic.tf
examples/data-sources/provider_versions/: basic.tf
examples/data-sources/registry_search/: basic.tf
examples/data-sources/registry_search/.soup/tfdata/providers/local/providers/tofusoup/0.0.1108/: darwin_arm64
examples/data-sources/state_info/: basic.tf  terraform.stexample
examples/data-sources/state_outputs/: basic.tf  terraform.stexample
examples/data-sources/state_resources/: basic.tf  terraform.stexample
examples/data-sources/state_resources/.soup/tfdata/providers/local/providers/tofusoup/0.0.1108/: darwin_arm64
examples/data-sources/tofusoup_module_info/: README.md  basic.tf  outputs.tf
examples/data-sources/tofusoup_module_search/: README.md  main.tf
examples/data-sources/tofusoup_module_versions/: outputs.tf
examples/data-sources/tofusoup_provider_info/: README.md  main.tf  outputs.tf  provider.tf
examples/data-sources/tofusoup_provider_versions/: outputs.tf
examples/data-sources/tofusoup_state_info/: README.md  basic.tf  main.tf
examples/data-sources/tofusoup_state_outputs/: basic.tf  main.tf  outputs.tf
examples/data-sources/tofusoup_state_resources/: outputs.tf
examples/data_source/state_info/: basic.tf
examples/data_source/state_resources/: basic.tf
keys/: flavor-private.key  flavor-public.key
scripts/: mkdocs_hooks.py
src/tofusoup/: __init__.py
src/tofusoup/tf/: __init__.py
src/tofusoup/tf/components/: __init__.py  provider.py
src/tofusoup/tf/components/data_sources/: __init__.py  module_info.py  module_search.py  module_versions.py  provider_info.py  provider_versions.py  registry_search.py  state_info.py  state_outputs.py  state_resources.py
src/tofusoup/tf/components/data_sources/module_info.plating/docs/: tofusoup_module_info.tmpl.md
src/tofusoup/tf/components/data_sources/module_search.plating/docs/: tofusoup_module_search.tmpl.md
src/tofusoup/tf/components/data_sources/module_search.plating/examples/: basic.tf
src/tofusoup/tf/components/data_sources/module_versions.plating/docs/: tofusoup_module_versions.tmpl.md
src/tofusoup/tf/components/data_sources/provider_info.plating/docs/: tofusoup_provider_info.tmpl.md
src/tofusoup/tf/components/data_sources/provider_info.plating/examples/: basic.tf
src/tofusoup/tf/components/data_sources/provider_versions.plating/docs/: tofusoup_provider_versions.tmpl.md
src/tofusoup/tf/components/data_sources/registry_search.plating/docs/: tofusoup_registry_search.tmpl.md
src/tofusoup/tf/components/data_sources/state_info.plating/docs/: tofusoup_state_info.tmpl.md
src/tofusoup/tf/components/data_sources/state_info.plating/examples/: basic.tf
src/tofusoup/tf/components/data_sources/state_outputs.plating/docs/: tofusoup_state_outputs.tmpl.md
src/tofusoup/tf/components/data_sources/state_outputs.plating/examples/: basic.tf
src/tofusoup/tf/components/data_sources/state_resources.plating/docs/: tofusoup_state_resources.tmpl.md
src/tofusoup/tf/components/data_sources/state_resources.plating/examples/: basic.tf  terraform.tfstate-example
tests/: __init__.py  test_provider.py
tests/data_sources/: __init__.py  conftest.py  test_module_info.py  test_module_search.py  test_module_versions.py  test_provider_info.py  test_provider_versions.py  test_registry_search.py  test_state_info.py  test_state_info_edge_cases.py  test_state_info_errors.py  test_state_info_read.py  test_state_info_schema.py  test_state_info_validation.py  test_state_outputs.py  test_state_resources.py
tests/data_sources/test_module_info/: __init__.py  test_basic.py  test_edge_cases.py  test_errors.py  test_read.py  test_validation.py
tests/data_sources/test_module_search/: __init__.py  test_basic.py  test_edge_cases.py  test_errors.py  test_read.py  test_validation.py
tests/data_sources/test_registry_search/: __init__.py  test_basic.py  test_edge_cases.py  test_errors.py  test_read.py  test_validation.py
tests/data_sources/test_state_outputs/: __init__.py  test_basic.py  test_edge_cases.py  test_errors.py  test_read.py  test_validation.py
tests/docs/data-sources/: provider_info.md  provider_versions.md  state_resources.md
tests/docs/guides/: getting-started.md
tests/examples/data-sources/tofusoup_module_info/: main.tf
tests/examples/data-sources/tofusoup_module_search/: outputs.tf
tests/examples/data-sources/tofusoup_module_versions/: README.md  main.tf
tests/examples/data-sources/tofusoup_provider_info/: outputs.tf
tests/examples/data-sources/tofusoup_provider_versions/: README.md  main.tf
tests/examples/data-sources/tofusoup_registry_search/: README.md  main.tf  outputs.tf
tests/examples/data-sources/tofusoup_state_info/: outputs.tf
tests/examples/data-sources/tofusoup_state_outputs/: README.md
tests/examples/data-sources/tofusoup_state_resources/: README.md  main.tf
