[project]
name = "terraform-provider-tofusoup"
dynamic = ["version"]
description = "Terraform provider for TofuSoup registry queries and state inspection"
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "pyvider",
    "tofusoup",
    "flavorpack",
    "provide-foundation[all]",
]

[project.urls]
Homepage = "https://foundry.provide.io/terraform-provider-tofusoup/"
Documentation = "https://foundry.provide.io/terraform-provider-tofusoup/"
Repository = "https://foundry.provide.io/terraform-provider-tofusoup/repo"
Issues = "https://foundry.provide.io/terraform-provider-tofusoup/issues"

[project.scripts]
terraform-provider-tofusoup = "pyvider.cli:main"

[project.entry-points.pyvider]
terraform-provider-tofusoup = "tofusoup.tf.components"

[dependency-groups]
dev = [
    "provide-testkit[all]",
    "plating",
]
docs = [
    "provide-testkit[docs]",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.ruff]
line-length = 111
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "B", "C90", "SIM", "PTH", "RUF"]
ignore = ["ANN401", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "E402"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--dist load"
# Parallel execution: pytest -n <workers> (range: 2-16, recommend: CPU cores or 8, max: 16 to avoid xdist hang)

[pyvider]
component_packages = ["tofusoup.tf.components"]

[tool.plating]
provider_name = "tofusoup"
output_dir = "docs"

[tool.flavor]
entry_point = "pyvider.cli:main"
output_path = "dist/terraform-provider-tofusoup"
platforms = ["darwin_arm64", "linux_amd64", "linux_arm64", "windows_amd64"]
